--- a/app/src/main/res/layout/listrow_details.xml
+++ b/app/src/main/res/layout/listrow_details.xml
@@ -19,7 +19,7 @@
         >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/tv_matter_list_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -30,7 +30,7 @@
             android:gravity="center_horizontal"
             android:textSize="22sp"/>
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_grade_list_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -62,7 +62,7 @@
         >
 
         <Button
-            android:id="@+id/btEditarMateria"
+            android:id="@+id/bt_edit_matter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -79,7 +79,7 @@
             android:background="@color/Branco"
             android:textSize="4sp" />
         <Button
-            android:id="@+id/btExcluirMateria"
+            android:id="@+id/bt_delete_matter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
