--- a/app/src/main/res/layout/activity_new_grade.xml
+++ b/app/src/main/res/layout/activity_new_grade.xml
@@ -1,14 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/FrameView1"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lt_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".CadastraNota" >
+    tools:context=".CadastraNota">
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/background_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
@@ -23,7 +24,7 @@
         android:background="@color/Branco">
 
         <TextView
-            android:id="@+id/tvMateria"
+            android:id="@+id/tv_matter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/cadastramentoNome"
@@ -36,13 +37,12 @@
             android:typeface="normal" />
 
         <EditText
-            android:id="@+id/etMateria"
+            android:id="@+id/etMatter"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/AzulMedio"
             android:textSize="25dp"
             android:gravity="bottom|center_horizontal"
-            android:text="8.9"
             android:ems="10"
             android:inputType="text"
             android:maxLength="22" >
@@ -57,7 +57,7 @@
         android:orientation="vertical"
         >
         <TextView
-            android:id="@+id/tvNotaCadastro"
+            android:id="@+id/tv_new_grade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -70,13 +70,12 @@
             android:typeface="normal" />
 
         <EditText
-            android:id="@+id/etNotaCadastro"
+            android:id="@+id/et_new_grade"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:imeOptions="actionDone"
             android:inputType="numberDecimal"
             android:gravity="bottom|center_horizontal"
-            android:text="8.9"
             android:clickable="false"
             android:editable="false"
             android:textColor="@color/AzulMedio"
@@ -85,31 +84,18 @@
             android:textSize="45sp"/>
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true" >
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/bt_persist_grade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/fab_button_margin_bottom"
+        android:src="@drawable/fab_check"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:layout_anchor="@id/lt_coordinator"
+        app:layout_anchorGravity="bottom|center"
+        app:pressedTranslationZ="12dp" />
 
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|clip_horizontal"
-            android:background="@drawable/flat_botao"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent" >
-
-            <Button
-                android:id="@+id/btSalvar1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/flat_botao"
-                android:onClick="salvaNota"
-                android:text="@string/salvar"
-                android:textColor="#FFFFFF"
-                android:textSize="25sp" />
-        </LinearLayout>
-    </FrameLayout>
-
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
