--- a/app/src/main/res/layout/grades_frag.xml
+++ b/app/src/main/res/layout/grades_frag.xml
@@ -31,12 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:scrollbarStyle="insideOverlay"
-
-
-        >
-
-    </ExpandableListView>
+        android:scrollbarStyle="insideOverlay" />
 
     <RelativeLayout
         android:layout_width="match_parent"
