--- a/app/src/main/res/layout/grades_frag.xml
+++ b/app/src/main/res/layout/grades_frag.xml
@@ -5,37 +5,78 @@
     android:background="#FFFFFF"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/background_image"
+    <LinearLayout
+        android:id="@+id/lt_no_grades"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:alpha=".40"
-        android:contentDescription="@string/descrUSJT"
-        android:src="@drawable/usjtflat" />
+        android:orientation="vertical"
+        android:visibility="gone">
 
-    <TextView
-        android:id="@+id/tv_grade_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/flat_button_2"
-        android:gravity="center"
-        android:minHeight="40dp"
-        android:text="Notas Mínimas Salvas"
-        android:textColor="@color/AzulMedio"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/tv_no_grades"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:padding="20dp"
+            android:text="@string/no_grades"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-    <ExpandableListView
-        android:id="@+id/list_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:scrollbarStyle="insideOverlay" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.3"
+            android:padding="70dp"
+            android:src="@drawable/no_grade" />
+    </LinearLayout>
 
     <RelativeLayout
+
+        android:id="@+id/lt_grades"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/lt_sub_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_matter_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:padding="8dp"
+                android:text="@string/matterName"
+                android:textColor="@color/AzulMedio"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_required_grade"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:padding="8dp"
+                android:text="@string/required_grade"
+                android:textColor="@color/AzulMedio"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_grades"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lt_sub_title"
+            android:layout_marginBottom="100dp"
+            android:scrollbarStyle="insideOverlay" />
+
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/bt_drop_all"
@@ -51,5 +92,6 @@
             app:layout_anchorGravity="bottom|center"
             app:pressedTranslationZ="12dp" />
     </RelativeLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
