--- a/app/src/main/res/layout/new_grade_frag.xml
+++ b/app/src/main/res/layout/new_grade_frag.xml
@@ -52,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:hint="@string/required_grade"
+                android:inputType="numberDecimal"
                 android:textSize="25dp"
                 app:met_floatingLabel="normal"
                 app:met_primaryColor="@color/Azul" />
